# sslOpenCrypt

./: .gitignore  CLAUDE.md  README.md  sslOpenCrypt_Complete_Book_v1.0.docx  sslOpenCrypt_Specification_v0.3.docx
sslopencrypt/: main.py  pyproject.toml  requirements.txt
sslopencrypt/cli/: __init__.py  main.py
sslopencrypt/core/: __init__.py  audit_log.py  executor.py  lab_report.py  result.py  session_log.py  tempfile_manager.py
sslopencrypt/docs/: india_dsc_feature_roadmap.md
sslopencrypt/integrations/dolphin/: README.md  install.sh  sslopencrypt-hash.sh  sslopencrypt.desktop
sslopencrypt/integrations/libreoffice/: README.md  install_libreoffice.py  ipc_server.py  sslopencrypt_macro.bas
sslopencrypt/integrations/nautilus/: README.md  install.sh  sslopencrypt-nautilus.py
sslopencrypt/modules/: __init__.py
sslopencrypt/modules/edu/: __init__.py
sslopencrypt/modules/gpg/: __init__.py  controller.py
sslopencrypt/modules/hashing/: __init__.py  controller.py
sslopencrypt/modules/india_dsc/: controller.py
sslopencrypt/modules/keymgmt/: __init__.py  controller.py
sslopencrypt/modules/pki/: __init__.py  controller.py
sslopencrypt/modules/random/: __init__.py  controller.py
sslopencrypt/modules/signing/: __init__.py  controller.py
sslopencrypt/modules/smime/: __init__.py  controller.py
sslopencrypt/modules/symmetric/: __init__.py  controller.py  ghost_crypt.py
sslopencrypt/modules/tls/: __init__.py  controller.py
sslopencrypt/modules/vault/: __init__.py  controller.py
sslopencrypt/packaging/: build_appimage.sh  install.sh  sslopencrypt.desktop  sslopencrypt.spec
sslopencrypt/packaging/AppDir/: AppRun  sslopencrypt.desktop
sslopencrypt/tests/: test_cli.py  test_comprehensive.py  test_core.py  test_extended.py  test_ghost_crypt.py  test_india_dsc.py  test_session_log.py  test_vault.py
sslopencrypt/ui/: __init__.py  app_state.py  command_console.py  main_window.py  sidebar.py
sslopencrypt/ui/panels/: base_panel.py  edu_panel.py  gpg_panel.py  hashing_panel.py  india_dsc_panel.py  integrations_panel.py  keymgmt_panel.py  pki_panel.py  random_panel.py  (+5 more)
(+6 files in other folders)
